<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="l00_nameofthegame_full">The Big Incredibly Funny Inverse Treasure Hunt 2.0 with 30% more Fun - For Free</string>
    
    <string name="l00_error_audio">"Audio replay is currently not working. Restarting the game or phone might help."</string>
  
    <string name="l00_help_part03">The placement of the levels is randomly chosen when you start a game. Here is a list of all possible levels. To see the help for an individual level click on its icon!</string>
    <string name="l00_help_part02">To lose part of your treasure play the level of your choice by pressing its icon. Levels that are marked with a question mark cannot be played yet. </string>
    <string name="l00_help_part01">Choose one of the menu items to play, get some help, or to see the credits. \nOnce you started a game you will see a map that displays the levels you can currently play and your progress of your quest to lose your treasure.</string>
    
    <string name="l00_nameofthegame_middle">The Big Incredibly Funny Inverse Treasure Hunt</string>
    <string name="l00_nameofthegame_short">BIFTH</string><string name="l00_unallowedLevel">Not there yet! Play a different level to get there!</string><string name="l01_hello">Level01 Hello World </string>
    <string name="l00_about_01">"was created by students at"</string>
    <string name="l00_about_02">"Vienna University of Technology, Austria:"</string>
    <string name="l00_about_03">Albors Askari, Felix Fleiß,</string>
    <string name="l00_about_04">Markus Töpfer, Johannes Sorger,</string>
    <string name="l00_about_05">Arthur Oberhauser, Sebastian Sippl,</string>
    <string name="l00_about_06">Johannes Scharl, Matthias Maschek,</string>
    <string name="l00_about_07">Ferdinand Pilz, Reinhard Sprung,</string>
    <string name="l00_about_08">Michal Domanski,</string>
    <string name="l00_about_09">Markus Ernst, Florian Felberbauer,</string> 
    <string name="l00_about_10">Markus Lipp,</string>
    <string name="l00_about_11">Christoph Fuchs, Roman Hochstöger,</string> 
    <string name="l00_about_12">Christian Tomaschitz,</string>
    <string name="l00_about_13">Alex Druml, Lukas Rössler,</string>
    <string name="l00_about_14">Thomas Perl, Matthias Tretter,</string>
    <string name="l00_about_15">Michael Benda, Alexander Fritz,</string>
    <string name="l00_about_16">Wolfgang Knecht, Martin Knecht,</string>
    <string name="l00_about_17">Tiare Feuchtner, Martin Schenk,</string>
    <string name="l00_about_18">Dominic Windisch, Martin Brachmann,</string>
    <string name="l00_about_19">Winklhofer Christoph,</string>
    <string name="l00_about_20">Gerd Katzenbeisser, Mike Vasiljevs,</string>
    <string name="l00_about_21">Thomas Schulz, Manuel Keglevic,</string>
    <string name="l00_about_22">Gerald Sollböck, Georg Molzer,</string>
    <string name="l00_about_23">Ingo Radax, Michael Asperger,</string>
    <string name="l00_about_24">Michael Hanzl, Peter Rautek</string>
    
    <string name="l00_about_25">"For credits press menu"</string>
    
    <string name="l00_help_01">that\'s you</string>
    <string name="l00_help_02">not allowed level</string>
    <string name="l00_help_03"></string>
    <string name="l00_help_04"></string>
    <string name="l00_help_05"></string>
    
    <string name="l00_credits_00">
    This game was developed during the course Computer Graphics on Mobile Devices, at Vienna University of Technology with the help of many people, open source projects and creative commons (CC) artwork. 
    The full version of this game consists of many more levels. 
    The source code of the game (including all levels) can be found at the <a href="http://code.google.com/p/cgmd2010/">public source code repository</a>.
    At the web page of the Institute of Computergraphics and Algorithms, more information about the course <a href="http://www.cg.tuwien.ac.at/courses/CGMD/">Computer Graphics on Mobile Devices</a> can be found.
    </string>
    <string name="l00_credits_01">" shared the texture(s) "</string>
    <string name="l00_credits_02">"Distributed under the license "</string>
    <string name="l00_credits_03">" shared the artwork(s) "</string>
    <string name="l00_credits_04">" shared the sound(s) "</string>
    <string name="l00_credits_05">" shared the music "</string>
    <string name="l00_credits_06">" shared the 3D model(s) "</string>
    <string name="l00_credits_07">" shared the photo(s) "</string>
    <string name="l00_credits_08">" shared the text(s) "</string>
    <string name="l00_credits_09">" shared the work(s) "</string>
    <string name="l00_credits_10">Thanks to everybody who contributed to this project:</string>
    <string name="l00_credits_11">"and anybody else."</string>
    <string name="l00_credits_12">"Music:"</string>
    <string name="l00_credits_13">"Sounds:"</string>
    <string name="l00_credits_14">"3D Models:"</string>
    <string name="l00_credits_15">"Textures:"</string>
    <string name="l00_credits_16">"Artworks:"</string>
    <string name="l00_credits_17">"Text:"</string>
    <string name="l00_credits_18">"Photos:"</string>
    <string name="l00_credits_19">"Others:"</string>
    
    <string name="l00_map_01">"To start a level, press a button that is ahead and already visible!"</string>
    <string name="l00_map_02">"To reach this point you have to lose more money! Press a level icon that is already visible!"</string>
    <string name="l00_map_03">"Level not found!"</string>
    <string name="l00_map_04">" gold left"</string>
    
    <string name="l00_map_06">"Great! You lost "</string>
    <string name="l00_map_07">" gold!"</string>
    <string name="l00_map_08">"Congratulations - You lost all your wealth! Do you already feel your newly gained freedom!"</string>
    
    <string name="l00_menu_01">"Music is on now."</string>
    <string name="l00_menu_02">"Music is off now."</string>

    <string name="l00_menu_03">Play!</string>
    <string name="l00_menu_04">New Game</string>
    <string name="l00_menu_05">Help</string>
    <string name="l00_menu_06">About</string>
    <string name="l00_menu_07">Credits</string>
    <string name="l00_menu_08">   Sound</string>
    
    
    
	<string name="l55_HelpTitle">Hero assistant</string>
	<string name="l55_HelpText_1">Everybody knows the situation: You’re playing a jump \’n\’ run level, busily collecting coins. But no one has ever thought about who’s the one that fills up all the empty levels again.\n\nThat’s exactly where you are needed! Fill up the empty level with coins again and do that as fast as possible. Because there’s one thing heros do not have – and that’s patience!\n\nMove your hero assistant with the right thumb through the level.</string>
	<string name="l55_HelpText_2">Use the “left” and “right” buttons to move left or right. The jump-button is divided into three areas. Use the middle to just jump. Using the left or right area, you’re able to simultanously jump and move into the selected direction.\n\nYou have to fill in two different types of coins.</string>
	<string name="l55_HelpText_3">These coins are easy to spread. Just put them into the level and they will stay there. On the other hand, there are diamonds.</string>
	<string name="l55_HelpText_4">You’ll pick up these stones again if you jump into the same field again. However you’ll fill up the level, NEVER ever jump into the spikes!!!\n\nHave fun!</string>


</resources>
