<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:orientation="vertical" android:layout_width="fill_parent">
	
	



<ScrollView android:id="@+id/ScrollView01" android:background="@drawable/l00_menuebackground" android:layout_height="wrap_content" android:layout_width="fill_parent"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/l55_HelpTitle" android:layout_width="fill_parent" android:padding="5pt" android:textColor="@color/l55_HelpTextColor" android:textSize="12pt" android:textStyle="bold"></TextView><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="5pt" android:textColor="@color/l55_HelpTextColor" android:text="@string/l55_HelpText_1" android:textSize="7pt"></TextView><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/l55_help1" android:layout_gravity="center"></ImageView><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="5pt" android:textColor="@color/l55_HelpTextColor" android:text="@string/l55_HelpText_2" android:textSize="7pt"></TextView><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:src="@drawable/l55_help2"></ImageView><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="5pt" android:textColor="@color/l55_HelpTextColor" android:text="@string/l55_HelpText_3" android:textSize="7pt"></TextView><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:src="@drawable/l55_help3"></ImageView><TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="5pt" android:textColor="@color/l55_HelpTextColor" android:text="@string/l55_HelpText_4" android:textSize="7pt"></TextView>
</LinearLayout>

</ScrollView>


</LinearLayout>
