<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:orientation="vertical" android:layout_width="fill_parent">
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20dip" android:layout_gravity="center_horizontal" android:text="@string/l00_nameofthegame_middle" android:gravity="center_horizontal" android:layout_margin="10dip"></TextView>
		
	<ScrollView 
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:padding="10px" android:layout_gravity="center_horizontal"><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Credits" android:layout_gravity="center_horizontal" android:layout_margin="10dip" android:textSize="18dip"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/l00_splashscreen" android:layout_gravity="center_horizontal" android:layout_margin="10dip"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_margin="10dip" android:textSize="16dip" android:text="@string/l00_credits_00" android:gravity="center_horizontal" android:textColorLink="#0011CC" android:id="@+id/l00_TextViewCredits02"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/l00_credits_10" android:layout_margin="10pt" android:gravity="center" android:textSize="16dip"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/l00_TextViewCredits" android:text="the credits" android:gravity="center" android:layout_gravity="center_horizontal"></TextView>
</LinearLayout>
		
	</ScrollView>




</LinearLayout>
